--- a/app/src/main/res/layout/fragment_add_product.xml
+++ b/app/src/main/res/layout/fragment_add_product.xml
@@ -17,10 +17,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
+    <EditText
         android:id="@+id/productName"
-        android:layout_width="372dp"
-        android:layout_height="36dp"
+        android:layout_width="373dp"
+        android:layout_height="57dp"
         android:layout_marginTop="28dp"
         android:text="@string/item_name"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
