--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,9 +7,9 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="com.example.dragonhack.ui.home.HomeFragment"
+        android:name="com.example.dragonhack.ui.allProducts.AllProductsFragment"
         android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_all_products" />
 
     <fragment
         android:id="@+id/nav_gallery"
